// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add ESLint 1`] = `
Object {
  "/.eslintignore": "node_modules/",
  "/.eslintrc": "{
  \\"extends\\": \\"eslint:recommended\\"
}",
  "/.gitignore": ".eslintcache",
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"pretest\\": \\"npm run lint\\",
    \\"test\\": \\"jest\\",
    \\"lint\\": \\"eslint . --cache --fix\\"
  }
}",
}
`;

exports[`should add custom rules 1`] = `
"{
  \\"extends\\": \\"eslint:recommended\\",
  \\"rules\\": {
    \\"no-undef\\": 0
  }
}"
`;

exports[`should add extra rules, parser and extensions for a TypeScript project 1`] = `
Object {
  "/.eslintignore": "node_modules/",
  "/.eslintrc": "{
  \\"extends\\": \\"eslint:recommended\\",
  \\"parser\\": \\"typescript-eslint-parser\\",
  \\"rules\\": {
    \\"no-undef\\": 0,
    \\"no-unused-vars\\": 0,
    \\"no-useless-constructor\\": 0
  }
}",
  "/.gitignore": ".eslintcache",
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"typescript\\": \\"*\\"
  },
  \\"scripts\\": {
    \\"lint\\": \\"eslint . --cache --fix --ext .ts,.tsx\\",
    \\"pretest\\": \\"npm run lint\\"
  }
}",
}
`;

exports[`should keep custom extensions defined in a package.json script 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"lint\\": \\"eslint . --cache --fix --ext .ts\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"test\\": \\"jest\\"
  }
}"
`;

exports[`should remove custom extension if it’s "js" (default value) 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"lint\\": \\"eslint . --cache --fix\\",
    \\"pretest\\": \\"npm run lint\\",
    \\"test\\": \\"jest\\"
  }
}"
`;

exports[`should replace scripts.test.eslint with scripts.lint and scripts.pretest 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"pretest\\": \\"npm run lint\\",
    \\"test\\": \\"jest\\",
    \\"lint\\": \\"eslint . --cache --fix --ext .ts\\"
  }
}"
`;

exports[`should use a custom preset 1`] = `
"{
  \\"extends\\": \\"airbnb\\"
}"
`;
